[tool.poetry]
name = "model-interpreter"
version = "0.1.0"
description = "An API for intuitive interpretation of machine learning models"
authors = ["André Ferreira <andrecnf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.17"
pandas = "1.0.3"
torch = "^1.1"
plotly = "^4.8.1"
tqdm = "^4.32"
colorlover = "^0.3.0"
shap = {git = "https://github.com/AndreCNF/shap.git"}
pdoc3 = "^0.7.2"
everett = "^1.0"
comet-ml = "^3.1.2"
pillow = "^7.0.0"
comet_ml = "^3.1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
